[package]
name = "webgpu_feature_test"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.4"
crevice = "0.6.0"
winit = { version = "0.25", features = ["web-sys"] }
wgpu = { version = "0.10", path = "../wgpu/wgpu" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3"
env_logger = "0.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# for building examples
wasm-bindgen-futures = "0.4.26"
web-sys = { version = "0.3.53" }
bytemuck = { version = "1.5", features = ["derive"] }
console_log = "0.2.0"
console_error_panic_hook = "0.1.6"